--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* * {
     box-sizing: border-box;
 } */
-body{
+/* body{
     height:100vh;
 }
 header {
@@ -85,7 +85,7 @@ p {
     font-weight: 500;
     font-style: italic;
     
-} 
+}  */
 /* .col {
     float: left;
     width: 33.33%;
@@ -146,4 +146,97 @@ p {
         flex-direction: column;
     }
 }  */
+#content{
+        display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            grid-auto-rows: minmax(100px, auto);
+            grid-gap: 10px;
+            max-width: 100vh;
+            margin: 0 auto;
+            height: 100vh;
+    }
+    #content>* {
+            background-color: palevioletred;
+            padding: 30px;
+    }
+    aside{
+        grid-column: 1/2;
+        grid-row:1/8;
+        display:flex;
+        align-items:center;
+    }
+    header{
+        grid-column: 2/13;
+        padding: 5px;
+        height:150px;
+        border:1px solid black;
+        background-image: url('images/p3.jpg');
+        background-repeat: no-repeat;
+        background-size: 800px 300px;
+        background-position-y: center;
+    }
+    
+    main{
+        grid-column: 2/13;
+        grid-row:2/4;
+        display:flex;
+        flex-direction:row;
+    }
+    .col-1-3 {
+        position:relative;
+        width:33.3%;
+        text-align: justify;
+        padding:15px;
+        color: antiquewhite;
+        font-weight: 300;
+    }
 
+
+
+    section{
+        grid-column:2/13;
+        grid-row:4/7;
+        display:flex;
+    }
+    .col-1-2 {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        margin: 10px;
+
+    }
+    div.box{
+        width:100%;
+        height:250px;
+        border:1px solid black;
+        background-image: url('images/p2.jpg');
+        background-repeat: no-repeat;
+        background-size:cover;
+        background-position-y: center;
+
+    }
+    div.box2{
+        width:100%;
+        height:250px;
+        border:1px solid black;
+        background-image: url('images/p4.jpg');
+        background-repeat: no-repeat;
+        background-size:cover;
+        background-position-y: center;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
+
+    footer{
+        grid-column:2/13;
+        padding-bottom: 10px;
+        color: palegoldenrod;
+        font-weight: 300;
+        font-style: italic;
+        font-size: small;
+        text-align: center;
+    }
